--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -32,81 +32,31 @@
                 <ul class="nav nav-pills">
                     <div *ngFor="let menuItem of menuItems">
                         <div *ngIf="!menuItem.headTitle1">
-                            <li class="nav-item">
+                            <li class="nav-item" *ngIf="!menuItem.children">
                                 <a class="nav-link" aria-current="page" routerLink="{{menuItem.path}}" routerLinkActive="active" (click)="menuclose()">
                                     <div class="avatar avatar-40 icon text-light"><i class="bi bi-{{menuItem.icon}}"></i></div>
                                     <div class="col text-light">{{menuItem.title}}</div>
                                     <div class="arrow text-light"><i class="bi bi-chevron-right"></i></div>
                                 </a>
                             </li>
+                            <li class="nav-item dropdown" *ngIf="menuItem.children">
+                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="false" data-bs-display="static" role="button" aria-expanded="false">
+                                    <div class="avatar avatar-40 icon text-light"><i class="bi bi-{{menuItem.icon}}"></i></div>
+                                    <div class="col text-light">{{menuItem.title}}</div>
+                                    <div class="arrow text-light"><i class="bi bi-chevron-down plus"></i> <i class="bi bi-chevron-up minus"></i></div>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li *ngFor="let valChildren of menuItem.children">
+                                        <a class="dropdown-item nav-link" routerLink="{{valChildren.path}}" routerLinkActive="active" (click)="menuclose()">
+                                            <div class="avatar avatar-40 icon text-light"><i class="bi bi-{{valChildren.icon}}"></i></div>
+                                            <div class="col align-self-center text-light">{{valChildren.title}}</div>
+                                            <div class="arrow text-light"><i class="bi bi-chevron-right"></i></div>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
                         </div>
                     </div>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" aria-current="page" routerLink="/alumno/academico" routerLinkActive="active" (click)="menuclose()">
-                            <div class="avatar avatar-40 icon text-light"><i class="bi bi-speedometer2"></i></div>
-                            <div class="col text-light">Académico</div>
-                            <div class="arrow text-light"><i class="bi bi-chevron-right"></i></div>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" routerLink="/alumno/pagos" routerLinkActive="active" (click)="menuclose()">
-                            <div class="avatar avatar-40 icon text-light"><i class="bi bi-cash-coin"></i></div>
-                            <div class="col text-light">Mis Pagos</div>
-                            <div class="arrow text-light"><i class="bi bi-chevron-right"></i></div>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" routerLink="/alumno/biblioteca" routerLinkActive="active" (click)="menuclose()">
-                            <div class="avatar avatar-40 icon text-light"><i class="bi bi-book"></i></div>
-                            <div class="col text-light">Biblioteca</div>
-                            <div class="arrow text-light"><i class="bi bi-chevron-right"></i></div>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" routerLink="/alumno/novedades" routerLinkActive="active" (click)="menuclose()">
-                            <div class="avatar avatar-40 icon text-light"><i class="bi bi-bell"></i></div>
-                            <div class="col text-light">Novedades</div>
-                            <div class="arrow text-light"><i class="bi bi-chevron-right"></i></div>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" routerLink="/pages/dashboard/finance" routerLinkActive="active" (click)="menuclose()">
-                            <div class="avatar avatar-40 icon"><i class="bi bi-cash-coin"></i></div>
-                            <div class="col">Pagos</div>
-                            <div class="arrow"><i class="bi bi-chevron-right"></i></div>
-                        </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" routerLink="/pages/dashboard/network" routerLinkActive="active" (click)="menuclose()">
-                            <div class="avatar avatar-40 icon"><i class="bi bi-calendar-event"></i></div>
-                            <div class="col">Eventos</div>
-                            <div class="arrow"><i class="bi bi-chevron-right"></i></div>
-                        </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" routerLink="/pages/dashboard/inventory" routerLinkActive="active" (click)="menuclose()">
-                            <div class="avatar avatar-40 icon"><i class="bi bi-bell"></i></div>
-                            <div class="col">Noticias</div>
-                            <div class="arrow"><i class="bi bi-chevron-right"></i></div>
-                        </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" routerLink="/pages/dashboard/social" routerLinkActive="active" (click)="menuclose()">
-                            <div class="avatar avatar-40 icon"><i class="bi bi-gear"></i></div>
-                            <div class="col">Soporte</div>
-                            <div class="arrow"><i class="bi bi-chevron-right"></i></div>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" routerLink="/alumno/perfil" routerLinkActive="active" (click)="menuclose()">
-                            <div class="avatar avatar-40 icon text-light"><i class="bi bi-person-circle"></i></div>
-                            <div class="col text-light">Perfil</div>
-                            <div class="arrow text-light"><i class="bi bi-chevron-right"></i></div>
-                        </a>
-                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="javascript:void(0)" aria-current="page" (click)="signout()">
                             <div class="avatar avatar-40 icon text-light"><i class="bi bi-box-arrow-right"></i></div>
