--- a/src/app/academic/pages/add-diplomado/plan-estudio/plan-estudio.component.html
+++ b/src/app/academic/pages/add-diplomado/plan-estudio/plan-estudio.component.html
@@ -41,7 +41,7 @@
                         </svg>
                     </a>
                     <br>
-                    Agregar Módulo
+                    Agregar Bloque
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 text-end">
                     <br>
