--- a/src/app/academic/pages/diplomados/diplomados.component.html
+++ b/src/app/academic/pages/diplomados/diplomados.component.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="col">
                         <h6 class="fw-medium mb-0 text-uppercase">DIPLOMADOS Y CURSOS TEMPORALES</h6>
-                        <p class="text-secondary small">Listado de los Diplomados y Cursos sin Terminar de Crearse al 100%</p>
+                        <p class="text-secondary small">Listado de los Diplomados y Cursos sin Terminar de Crear al 100%</p>
                     </div>
                 </div>
             </div>
