--- a/src/app/ventas/pages/registro/matriculas/matriculas.component.html
+++ b/src/app/ventas/pages/registro/matriculas/matriculas.component.html
@@ -9,13 +9,13 @@
                     <th class="text-center"><small>DNI</small></th>
                     <th class="text-center"><small>Celular</small></th>
                     <th class="text-center"><small>Diplomado</small></th>
-                    <th class="text-center"><small>Matrícula</small></th>
-                    <th class="text-center"><small>Descuento</small></th>
-                    <th class="text-center"><small>Pago Matrícula</small></th>
+                    <th class="text-center" style="background-color: rgba(62, 235, 88, 0.736);"><small>Matrícula</small></th>
+                    <th class="text-center" style="background-color: rgba(62, 235, 88, 0.736);"><small>Descuento</small></th>
+                    <th class="text-center" style="background-color: rgba(62, 235, 88, 0.736);"><small>Pago Matrícula</small></th>
+                    <th class="text-center" style="background-color: rgba(62, 235, 88, 0.736);"><small>Fecha Pago</small></th>
+                    <th class="text-center" style="background-color: rgba(235, 62, 62, 0.736);"><small>Cuota 1</small></th>
+                    <th class="text-center" style="background-color: rgba(235, 62, 62, 0.736);"><small>Estado</small></th>
                     <th class="text-center"><small>Fecha Pago</small></th>
-                    <th class="text-center"><small>Cuota 1</small></th>
-                    <th class="text-center"><small>Fecha Pago</small></th>
-                    <th class="text-center"><small>Recordatorio</small></th>
                     <th class="text-center"><small>Acciones</small></th>
                 </tr>
                 </thead>
@@ -83,7 +83,7 @@
                             <span class="text-theme mx-2"><i class="bi bi-person"></i></span>
                             <b>Tipo Matrícula:</b>
                         </label>
-                        <p class="sub_info">Primera Mensualidad</p>
+                        <p class="sub_info">Primera Cuota</p>
                     </div>
                 </div>
                 <div class="col-md-12 col-sm-12 col-lg-12 mb-3">
