--- a/src/app/academic/pages/materiales/materiales.component.html
+++ b/src/app/academic/pages/materiales/materiales.component.html
@@ -10,7 +10,7 @@
                         <h6 class="fw-medium mb-0 text-uppercase">Materiales</h6>
                         <p class="text-secondary small">Agregar Material de Diplomado</p>
                     </div>
-                    <form [formGroup]="formgrupos" class="col-auto">
+                    <!-- <form [formGroup]="formgrupos" class="col-auto">
                         <div class="form-group">
                             <ng-select formControlName="diplomado"
                                         [items]="diplomado"
@@ -20,10 +20,25 @@
                                         (change)="listGroup($event)">
                             </ng-select>
                         </div>
-                    </form>
+                    </form> -->
                 </div>
             </div>
             <div class="card-body py-3">
+                <div class="row justify-content-center mb-4">
+                    <div class="col-sm-12 col-md-6 col-lg-6">
+                        <form [formGroup]="formgrupos">
+                            <div class="form-group">
+                                <ng-select formControlName="diplomado"
+                                            [items]="diplomado"
+                                            bindLabel="courses_name"
+                                            bindValue="courses_code"
+                                            placeholder="SELECCIONAR DIPLOMADO"
+                                            (change)="listGroup($event)">
+                                </ng-select>
+                            </div>
+                        </form>
+                    </div>
+                </div>
                 <div class="row justify-content-center" *ngIf="modulo">
                     <div class="col-sm-12 col-md-6 col-lg-6">
                         <ul class="mb-0 treeview" id="treeviewExample">
